<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life App No Libs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="greetings_button">Greetings</string>
    <string name="departures_button">Departures</string>
    <string name="disagreements_button">Handling Disagreements</string>
    <string name="dos_and_donts_button">Conversation Dos and Donts</string>
    <string name="scripts_home_title">Scripts</string>
    <string name="family_sub_cat">Family</string>
    <string name="friends_sub_cat">Friends</string>
    <string name="new_people_sub_cat">New People</string>
    <string name="professionals_sub_cat">Professionals</string>
    <string name="script_sample_text">Written Samples</string>
    <string name="video_sample_text">Videos</string>
    <string name="title_activity_departures_script">Departures Script</string>
    <string name="title_activity_disagreements_script">Disagreements Script</string>
    <string name="title_activity_dos_and_donts_script">Dos And Donts Script</string>
    <string name="title_activity_greetings_script">Greetings Script</string>
    <string name="title_activity_written_samples">Written Samples</string>
    <string name="title_activity_video_samples">Video Samples</string>
    <string name="asking_questions_button">Asking Questions</string>
    <string name="active_listening_button">Active Listening</string>
    <string name="volume_button">Volume</string>
    <string name="content_button">Content</string>
    <string name="title_activity_asking_questions">Asking Questions</string>
    <string name="title_activity_active_listening">Active Listening</string>
    <string name="title_activity_volume">Volume</string>
    <string name="title_activity_content">Content</string>
    <string name="sample_script_family">FAMILYThe best way to say something is neato, awesome, or swell. The phrase cool is very relaxed, never goes out of style, and people will never laugh at you for using it, very conveniant for people like me who dont care about whats in</string>
    <string name="sample_script_friends">FRIENDSThe best way to say something is neato, awesome, or swell. The phrase cool is very relaxed, never goes out of style, and people will never laugh at you for using it, very conveniant for people like me who dont care about whats in</string>
    <string name="sample_script_new_people">NEW PEOPLEThe best way to say something is neato, awesome, or swell. The phrase cool is very relaxed, never goes out of style, and people will never laugh at you for using it, very conveniant for people like me who dont care about whats in</string>
    <string name="sample_script_professionals">PROFESSIONALSThe best way to say something is neato, awesome, or swell. The phrase cool is very relaxed, never goes out of style, and people will never laugh at you for using it, very conveniant for people like me who dont care about whats in</string>
    <string name="sample_script_long">The best way to say something is neato, awesome, or swell. The phrase cool is very relaxed, never goes out of style, and people will never laugh at you for using it, very conveniant for people like me who dont care about whats in</string>
    <string name="title_activity_what_is_it">WhatIsIt</string>
    <string name="title_activity_scripts">Scripts</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_how_do_iactively_listen">HowDoIActivelyListen</string>
    <string name="title_activity_video_clips">VideoClips</string>
    <string name="title_activity_its_all_about_balance">ItsAllAboutBalance</string>
    <string name="title_activity_volume_video_clips">VolumeVideoClips</string>
    <string name="title_activity_whats_inappropriate">WhatsInappropriate</string>
    <string name="title_activity_content_video_clips">ContentVideoClips</string>

   <string name="scripts_data">\nIf someone asks\n
		How are you?\n
		What are your plans for the weekend?\n
		What’s new?\n
		How was your week?\n\n
	    It’s polite to ask them the same question back
</string> 
    
    <string name="active_listening_data">\nWhat is active listening\n\n
		•	Active Listening is a communication technique that allows the speaker to know the listener is paying attention and comprehending what he/she is hearing.
</string> 
    
    <string name="how_do_i_listen_data">\nHow do I actively listen\n\n
•	Don’t:  text, play video games, read  or do other distracting activities that will interfere with eye contact
\n•	Do: ask questions for more infomration or clarifiaction

		
</string> 
    
    <string name="its_all_balance_data">\n•	Don’t talk loudly- this makes the listener uncomfrtable
\n•	Don’t talk softly- this makes it difficult for the listener to understand what you are saying

</string> 
    
    
  <string name="inapp_content_data">
	\nThe following make people uncofrotable, upset, and even agnry:\n\n
•	Asking personal questions\n
•	Sharing  inapropriate personal information\n
•	Bringing up innapropriate topics- religion, politics, controversial social issues
\n•	Using innapropriate language
	
</string> 
    
    
    
    
    
    
    
    
    
</resources>
