<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="2" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@+string/greetings_picture"
            android:background="@drawable/greetings">            
        </ImageView>
        
     </LinearLayout>        
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background" >

        <HorizontalScrollView
            android:id="@+id/tab_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/family_sub_cat" />
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_sub_cat" />
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/new_people_sub_cat" />
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/professionals_sub_cat" />
                
            </LinearLayout>            
        </HorizontalScrollView>        
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tab_bar" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum = "2">
                
                <Button
                    android:id="@+id/scripts_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/script_sample_text" />
                <Button  
                    android:layout_width="fill_parent"                                      
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/video_sample_text" />  
                                                                      
            </LinearLayout>            
        </ScrollView>        
    </RelativeLayout>    
</LinearLayout>